# iee-framework

./: CMakeLists.txt  README.md  TODO.md
Framework/: CMakeLists.txt
Framework/include/: definitions.h  outside_util.h  untrusted_util.h
Framework/src/Client/: CMakeLists.txt  Client.cpp
Framework/src/Iee/: CMakeLists.txt  Enclave.cpp  Enclave.edl  Enclave.h
Framework/src/Iee/sgx_config/: Enclave.config.xml.in
Framework/src/IeeComm/: App.cpp  CMakeLists.txt
Framework/src/IeeComm/ocall/: ocall.cpp  ocall.h
Framework/src/LibTrusted/: CMakeLists.txt  outside_util.cpp
Framework/src/LibUntrusted/: CMakeLists.txt  secure_conn.cpp  untrusted_util.cpp
UserModule/: CMakeLists.txt
UserModule/src/: trusted.cpp
